добавил элемент трек

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,6 +5,7 @@
       <p class="hero__single-text">New Single</p>
       <p class="hero__war-text">War For Love</p>
       @include('./trek-hero.html')
+      @include('./hero-gallery.html')
     </div>
   </div>
 </div>
