--- a/src/partials/trek-hero.html
+++ b/src/partials/trek-hero.html
@@ -2,7 +2,9 @@
   <div class="trek__play"></div>
   <div class="trek__line">
     <div class="trek__line-blue">
-      <span class="trek__line-blue-vertical"></span>
+      <div class="trek__box-trigger">
+        <span class="trek__line-blue-vertical"></span>
+      </div>
     </div>
     <div class="trek__line-inner"></div>
   </div>
