--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,5 +8,7 @@
 @import "./components/header";
 @import "./components/hero";
 @import "./components/trek";
+@import "./components/bright-section";
+@import "./components/hero-gallery";
 
 // тестовые стили, удалите их
