--- a/src/partials/trek-hero.html
+++ b/src/partials/trek-hero.html
@@ -1,4 +1,4 @@
-<div class="trek">
+<!-- <div class="trek">
   <div class="trek__play"></div>
   <div class="trek__line">
     <div class="trek__line-blue">
@@ -13,4 +13,9 @@
     <span> - </span>
     <span class="trek__time-before">02:54</span>
   </div>
-</div>
+</div> -->
+
+<audio class="player" controls>
+  <source src="../audio/levels.mp3" />
+  Ваш браузер не поддерживает аудиоплеер.
+</audio>
