--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,6 @@
 @import "./components/trek";
 @import "./components/bright-section";
 @import "./components/hero-gallery";
+@import "./components/plyr";
 
 // тестовые стили, удалите их
